UI / bug showing captions, added png favicon, alignement buttons

--- a/public/src/vue/less/_timeline.less
+++ b/public/src/vue/less/_timeline.less
@@ -37,7 +37,7 @@
     height: 24px;
     padding: 4px;
     // padding: 4px;
-    background-color: var(--color-noir);
+    background-color: #00dcaa;
   }
 
   &::-webkit-scrollbar-track {
@@ -51,7 +51,7 @@
     background-color: var(--timeline-bg);
     // outline: 4px solid slategrey;
     // height: 10px;
-    border: 4px solid var(--color-noir);
+    border: 4px solid #00dcaa;
     border-radius: 14px;
     &:hover {
     }
