--- a/public/src/vue/style.less
+++ b/public/src/vue/style.less
@@ -852,11 +852,11 @@ video {
   }
 
   &::-webkit-scrollbar-track {
-    background-color: @c-gris_clair;
+    background-color: #fff;
   }
 
   &::-webkit-scrollbar-thumb {
-    background-color: #000;
+    background-color: #8c1ee5;
     &:hover {
       border: @scrollbar-padding solid rgba(255, 255, 255, 0);
     }
